--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,69 +1,43 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium
-              rounded-lg inline-block" id="notice">
-      <%= notice %>
-    </p>
-  <% end %>
+<% if notice.present? %>
+  <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg
+            inline-block" id="notice">
+    <%= notice %>
+  </p>
+<% end %>
 
-  <div class="flex justify-between items-center pb-8">
-    <h1 class="mx-auto text-lg font-bold text-4xl">Products</h1>
-  </div>
+<h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
+  Your Pragmatic Catalog
+</h1>
 
-  <table id="products" class="mx-auto">
-    <tfoot>
-      <tr>
-        <td colspan="3">
-          <div class="mt-8">
-            <%= link_to 'New product', 
-                        new_product_path,
-                        class: "inline rounded-lg py-3 px-5 bg-green-600
-                                text-white block font-medium" %>
-          </div>
-        </td>
-      </tr>
-    </tfoot>
+<ul>
+  <% cache @products do %>
+    <% @products.each do |product| %>
+      <% cache product do %>
+        <li class='flex mb-6'>
+          <%= image_tag(product.image_url,
+            class: 'object-contain w-40 h-48 shadow mr-6') %>
 
-    <tbody>
-      <% @products.each do |product| %>
-        <tr class="<%= cycle('bg-green-50', 'bg-white') %>">
+          <div>
+            <h2 class="font-bold text-lg mb-3"><%= product.title %></h2>
 
-          <td class="px-2 py-3">
-            <%= image_tag(product.image_url, class: 'w-40') %>
-          </td>
-
-          <td>
-            <h1 class="text-xl font-bold mb-3"><%= product.title %></h1>
             <p>
-              <%= truncate(strip_tags(product.description),
-                           length: 80) %>
+              <%= sanitize(product.description) %>
             </p>
-          </td>
 
-          <td class="px-3">
-            <ul>
-              <li>
-                <%= link_to 'Show', 
-                             product,
-                             class: 'hover:underline' %>
-              </li>
-              <li>
-                <%= link_to 'Edit',
-                             edit_product_path(product),
-                             class: 'hover:underline' %>
-              </li>
+            <div class="mt-3">
+              <%= number_to_currency(product.price) %>
 
-              <li>
-                <%= link_to 'Destroy',
-                             product,
-                             class: 'hover:underline',
-                             data: { turbo_method: :delete,
-                                     turbo_confirm: "Are you sure?" } %>
-              </li>
-            </ul>
-          </td>
-        </tr>
+              <%= button_to 'Add to Cart',
+                  line_items_path(product_id: product),
+                  form_class: 'inline',
+                  class: 'ml-4 rounded-lg py-1 px-2
+                          text-white bg-green-600' %>
+            </div>
+          </div>
+        </li>
       <% end %>
-    </tbody>
-  </table>
+    <% end %>
+  <% end %>
+</ul>
 </div>
