--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,6 @@
-<div>
-  <h1 class="font-bold text-4xl">Store#index</h1>
-  <p>Find me in app/views/store/index.html.erb</p>
+<div class='w-full'>
+ <%= render 'notice' %>
+<h1 class="font-bold text-xl mb-6 pb-2 border-b-2">
+  Your Pragmatic Catalog
+</h1>
 </div>
